--- a/examples/modern/index.html
+++ b/examples/modern/index.html
@@ -64,7 +64,7 @@ for (var i = 0; i < 18; i++) {
 }
 
 var holder = document.getElementById("holder");
-var graph = new Aristochart(holder, {
+var graph = new H5C(holder, {
   data: {
     x: 19,
     tick: [
@@ -85,6 +85,6 @@ var graph = new Aristochart(holder, {
     },
   },
   // xLabelText: ['~01-12', '~01-14', '~01-16', '~01-18', '~01-20', '~01-22',],
-}, Aristochart.themes.modern);
+}, H5C.themes.modern);
 </script>
 </html>
